--- a/index.html
+++ b/index.html
@@ -118,7 +118,25 @@
         </div>
     </section>
     <footer>
-        social links here
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="blank"_rel="noopener" 
+                aria-label="Visit our Facebook page (opens in new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="blank"_rel="noopener" 
+                aria-label="Visit our Twitter page (opens in new tab)"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="blank"_rel="noopener" 
+                aria-label="Visit our YouTube page (opens in new tab)"><i class="fab fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="blank"_rel="noopener" 
+                aria-label="Visit our Instagram page (opens in new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
+            
+        </ul>
     </footer>
 
     <!--font awesome script-->
